--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
+<html>
+<head>
+  <title>Memory Game</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <nav class="clearfix">
+      <a href="#instructions">Instructions</a>
+      <a href="#game-board">Game</a>
     </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
-
-     </body>
-
-
+    <hr>
+    <h1>Memory Game</h1>
+  <h3>The Greatest Game Ever!</h3>
+  <h2 id="instructions">Instructions</h2>
+  <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+    <div class="board" id="game-board"></div>
+    <div></div>
+  <div id="inventor">
+      <a href="https://www.linkedin.com/in/scwhitman">Meet the inventor</a>
+    </div>
+    <footer>
+      <p>Created with &#9829 by <span id="name">Scott Whitman</span></p>
+    </footer>
+<script src="main.js"></script>
+</body>
 </html>
