--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,8 +14,8 @@
   <h3>The Greatest Game Ever!</h3>
   <h2 id="instructions">Instructions</h2>
   <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-    <div class="board" id="game-board"></div>
-    <div></div>
+    <div class="board" id="game-board">
+    </div>
   <div id="inventor">
       <a href="https://www.linkedin.com/in/scwhitman">Meet the inventor</a>
     </div>
